enable preview for server tests